@@ -39,6 +39,7 @@ import com.yubico.yubikit.core.application.CommandState;
 
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Objects;
 
 import javax.annotation.Nullable;
@@ -212,16 +213,18 @@ public class YubiKeyPromptActivity extends Activity {
         allowNfc = args.getBoolean(ARG_ALLOW_NFC, true);
 
         // Get the action to perform on YubiKey connected
+        @SuppressWarnings("deprecation")
         Class<?> actionType = (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU)
                 ? (Class<?>) args.getSerializable(ARG_ACTION_CLASS, Class.class)
                 : (Class<?>) args.getSerializable(ARG_ACTION_CLASS);
         try {
             if (actionType != null && YubiKeyPromptAction.class.isAssignableFrom(actionType)) {
-                action = (YubiKeyPromptAction) actionType.newInstance();
+                action = (YubiKeyPromptAction) actionType.getDeclaredConstructor().newInstance();
             } else {
                 throw new IllegalStateException("Missing or invalid ConnectionAction class");
             }
-        } catch (IllegalStateException | IllegalAccessException | InstantiationException e) {
+        } catch (IllegalStateException | IllegalAccessException | InstantiationException |
+                 NoSuchMethodException | InvocationTargetException e) {
             Logger.error(logger, "Unable to instantiate ConnectionAction", e);
             finish();
         }
